# Temp-VoiceRS-bot

./: .gitignore  README.md
voicers/: Cargo.toml  build_linux.sh  build_windows.bat  combined_build.bat
voicers/src/: config.rs  discord.rs  main.rs
voicers/src/commands/: contextmenu.rs  createvc.rs  help.rs  mod.rs  setmodrole.rs  setusermod.rs
