[package]
name = "voicers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
log = "0.4.20"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serenity = "0.12.0"
swing = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
