[package]
name = "voicers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
colored = "2.1.0"
libsqlite3-sys = "0.27.0"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.serenity]
version = "0.12.0"
features = ["gateway", "client", "framework", "standard_framework", "cache", "voice"]

[dependencies.poise]
version = "0.6.1"
features = ["cache"]